/**
 * (This Protocol Documentation is generated by `protoc-gen-doc` )
 *
 * This proto defines messages and services of Cloud-Barista Network (shortly cb-network).
 *  
 * The cb-network mainly provides services for Cloud Adaptive Network (shortly CLADNet / cladnet).
 * The Cloud Adaptive Network is a virtual, common network configured on the different Multi-Cloud
 * 
 * This document describes gRPC-style messages and services.
 *
 * NOTE - The auto-generated API document describes this proto in alphabetical order.
 */
syntax = "proto3";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package cbnet.v1;

option go_package = "github.com/cloud-barista/cb-larva";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
		title: "Cloud-Barista Network (cb-network) service";
		version: "1.0";
        description: "Note - `cloud_barista_network.swagger.json` is generated by `openapiv2`";
		contact: {
			name: "Cloud-Barista organization";
			url: "https://github.com/cloud-barista";
			email: "contact-to-cloud-barista@googlegroups.com";
		};
		license: {
			name: "Apache License Version 2.0";
			url: "https://github.com/cloud-barista/cb-larva/blob/main/LICENSE";
		};
        extensions: {
			key: "x-something-something";
			value {
				string_value: "yadda";
			}
		}
	};

};

/**
 * It represents an enumerator for commands to the control cb-network system.
 */
enum CommandType {
    UP = 0;
    DOWN = 1;
    ENABLE_ENCRYPTION = 3;
    DISABLE_ENCRYPTION = 4;
}

/**
 * It represents a command to control the cb-network system.
 */
message ControlRequest{    
    string cladnet_id = 1;
    CommandType command_type = 2;
}

/**
 * It represents a result of the command to control the cb-network system.
 */
message ControlResponse{
    bool is_succeeded = 1;                              // Success or failure
    string message = 2;                                 // Message
}


enum TestType {
    CONNECTIVITY = 0;
}

/**
 * It represents a result of the command to control the cb-network system.
 */
message TestRequest{
    string cladnet_id = 1;
    TestType test_type = 2;
    string test_spec = 3;                               
}

/**
 * It represents a result of the command to control the cb-network system.
 */
message TestResponse{
    bool is_succeeded = 1;                              // Success or failure
    string message = 2;                                 // Message
}



/**
 * Service for handling the cb-network system management
 */
service SystemManagementService {    
    // Checks service health
    rpc health(google.protobuf.Empty) returns (google.protobuf.StringValue){
        option (google.api.http) = {
            get: "/health"
        };
    }

    // Controls a Cloud Adaptive Network from the remote
    rpc controlCloudAdaptiveNetwork(ControlRequest) returns (ControlResponse){
        option (google.api.http) = {
            get: "/v1/control/cladnet/{cladnet_id}/command/{command_type}"
        };
        
    }

    // Tests a Cloud Adaptvie Network
    rpc testCloudAdaptiveNetwork(TestRequest) returns (TestResponse){
        option (google.api.http) = {
            post: "/v1/test/cladnet/{cladnet_id}/type/{test_type}"
            body: "*"
        };
    }
}

/**
 * It represents a specification of Cloud Adaptive Network.
 */
message CLADNetSpecification{
    string id = 1;  // ID of Cloud Adaptive Network
    string name = 2;    //  name of Cloud Adaptive Network
    string ipv4_address_space = 3;  // IPv4 address space (e.g., 192.168.0.0/24) of Cloud Adaptive Network 
    string description = 4;     // Description of Cloud Adaptive Network
}

/**
 * It represents a list of Cloud Adaptive Network specifications.
 */
message CLADNetSpecifications{
    repeated CLADNetSpecification cladnet_specifications = 1;   // A list of Cloud Adaptive Network specification
}

/**
 * It represents an ID of Cloud Adaptive Network.
 */
message CLADNetID{
    string cladnet_id = 1;
}

/**
 * It represents a list of IP networks (e.g., 10.10.1.5/16).
 */
message IPNetworks{
    repeated string ip_networks = 1;
}

/**
 * It represents available IPv4 private address spaces
 * (also known as CIDR block, CIDR range, IP address range).
 */
message AvailableIPv4PrivateAddressSpaces {
	string recommended_ipv4_private_address_space = 1;  // A recommended IPv4 address space
    repeated string address_space10s = 2;               // All available Ipv4 address space in 10.0.0.0/8
    repeated string address_space172s = 3;              // All available Ipv4 address space in 172.16.0.0/12
    repeated string address_space192s = 4;              // All available Ipv4 address space in 192.168.0.0/16
}

/**
 * It represents a result of attempt to delete a Cloud Adaptive Network.
 */
message DeletionResult{
    bool is_succeeded = 1;                              // Success or failure
    string message = 2;                                 // Message
    CLADNetSpecification cladnet_specification = 3;     // A specification of the target Cloud Adaptive Network
}


/**
 * Service for handling Cloud Adaptive Network
 */
service CloudAdaptiveNetworkService {    

    // Get a Cloud Adaptive Network specification
    rpc getCLADNet(CLADNetID) returns (CLADNetSpecification) {
        option (google.api.http) = {
            get: "/v1/cladnet/{cladnet_id}"
        };
    }

    // Get a list of Cloud Adaptive Network specifications
    rpc getCLADNetList(google.protobuf.Empty) returns (CLADNetSpecifications) {
        option (google.api.http) = {
            get: "/v1/cladnet"
        };
    }

    // Create a new Cloud Adaptive Network    
    rpc createCLADNet(CLADNetSpecification) returns (CLADNetSpecification) {
        option (google.api.http) = {
            post: "/v1/cladnet"
            body: "*"
        };
    }

    // [To be provided] Delete a Cloud Adaptive Network
    rpc deleteCLADNet(CLADNetID) returns (DeletionResult) {
        option (google.api.http) = {
            delete: "/v1/cladnet"
        };
    }

    // [To be provided] Update a Cloud Adaptive Network
    rpc updateCLADNet(CLADNetSpecification) returns (CLADNetSpecification) {
        option (google.api.http) = {
            put: "/v1/cladnet"
            body: "*"
        };
    }

    // Recommend available IPv4 private address spaces for Cloud Adaptive Network
    rpc recommendAvailableIPv4PrivateAddressSpaces(IPNetworks) returns (AvailableIPv4PrivateAddressSpaces){
        option (google.api.http) = {
            post: "/v1/cladnet/available-ipv4-address-spaces"
            body: "*"
        };
    }
}

